--- a/index.html
+++ b/index.html
@@ -456,7 +456,8 @@
 		<div class="bottom">
 			<div class="buttons">
 				<div class="pull-left">
-					<button class="start btn btn-default btn-sm">Start Tutorial</button>
+					<button class="start btn btn-default btn-sm">Start Introduction</button>
+					<button class="demo btn btn-default btn-sm">Load Demo</button>
 				</div>
 				<div class="pull-right">
 					<button class="cancel btn btn-primary btn-sm">close</button>
@@ -570,7 +571,7 @@
 </script>
 
 <script type="text/template" id="tutorial_template_introduction_3">
-	<h3>Introduction - shortcuts for changing the datetime range</h3>
+	<h3>Introduction - shortcuts for changing the time range</h3>
 	<div class="inner">
 		<div class="content">
 			<div class="step t0">
@@ -615,8 +616,10 @@
 				<p>The gear button on the top right of the sensor feeds panel opens the application 
 				settings form.</p>
 				<p>In this form, the lines and dots on the plot and are switched on or off.</p>
+				<p>	You can load my ThingSpeak read api credentials for a testrun by clicking <i>Load Demo</i>.</p>
 				<div class="continue">
 					<button class="prev btn btn-default btn-sm">prev</button>
+					<button class="demo btn btn-default btn-sm">Load Demo</button>
 				</div>
 			</div>
 		</div>
