--- a/compile/compile.html
+++ b/compile/compile.html
@@ -1,6 +1,7 @@
 
 <script src="lib/date.js"></script>
 <link rel="stylesheet" href="contrib/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="contrib/bootstrap-switch/bootstrap-switch.css">
 <link rel="stylesheet" href="styles/form.css"></link>
 <link rel="stylesheet" href="styles/flot.css"></link>
 <link rel="stylesheet" href="contrib/drumjs/drum.css"></link>
@@ -14,6 +15,7 @@
 <script src="contrib/hammerjs/hammer.js"></script>
 <script src="contrib/hammerjs/hammer.fakemultitouch.js"></script>
 <script src="contrib/bootstrap/js/bootstrap.js"></script>
+<script src="contrib/bootstrap-switch/bootstrap-switch.js"></script>
 
 <script src="contrib/underscore/underscore.js"></script>
 <script src="contrib/backbone/backbone.js"></script>
