change test on introduction start screen

--- a/index.html
+++ b/index.html
@@ -448,7 +448,8 @@
 	<h3>Introduction</h3>
 	<div class="inner">
 		<div class="content">
-			<p>If you open the <b>IOT Viewer</b> for the first time, you can start with the tutorial or load demo data.</p>
+			<p>If you open the <b>IOT Viewer</b> for the first time, you can start with the tutorial or load the demo.</p>
+			<p>For more information, read the <a target="_new" href="http://mb.aquarius.uberspace.de/internet-of-things-viewer/">Blogpost</a> or visit the project at <a href="https://github.com/3epnm/iot-viewer" target="_new">GitHub</a>.</p> 
 		</div>
 		<div class="bottom">
 			<div class="buttons">
