--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset='utf-8'>
@@ -21,7 +22,7 @@
 	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 
 	<link rel="stylesheet" href="compile/demo.min.css"></link>
-	<script src="compile/demo.min.js"></script>	
+	<script src="compile/demo.min.js"></script>
 </head>
 <body>
 <div class="wrapper">
@@ -122,7 +123,7 @@
 				</div>
 				<form name="date_from">
 					<div class="lines"><div>:</div></div>
-					<select class="date" id="from_date" name="from_date">
+					<select class="form-control input-sm date" id="from_date" name="from_date">
 						<option value="1">1.</option>
 						<option value="2">2.</option>
 						<option value="3">3.</option>
@@ -155,7 +156,7 @@
 						<option value="30">30.</option>
 						<option value="31">31.</option>
 					</select>
-					<select class="date" id="from_month" name="from_month">
+					<select class="form-control input-sm date" id="from_month" name="from_month">
 						<option value="0">January</option>
 						<option value="1">February</option>
 						<option value="2">March</option>
@@ -169,7 +170,7 @@
 						<option value="10">November</option>
 						<option value="11">December</option>
 					</select>
-					<select class="date" id="from_fullYear" name="from_fullYear">
+					<select class="form-control input-sm date" id="from_fullYear" name="from_fullYear">
 						<option value="2011">2011</option>
 						<option value="2012">2012</option>
 						<option value="2013">2013</option>
@@ -178,7 +179,7 @@
 						<option value="2016">2016</option>
 						<option value="2017">2017</option>
 					</select>
-					<select class="date" id="from_hours" name="from_hours">
+					<select class="form-control input-sm date" id="from_hours" name="from_hours">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -204,7 +205,7 @@
 						<option value="22">22</option>
 						<option value="23">23</option>
 					</select>
-					<select class="date" id="from_minutes" name="from_minutes">
+					<select class="form-control input-sm date" id="from_minutes" name="from_minutes">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -275,7 +276,7 @@
 				</div>
 				<form name="date_to">
 					<div class="lines"><div>:</div></div>
-					<select class="date" id="to_date" name="to_date">
+					<select class="form-control input-sm date" id="to_date" name="to_date">
 						<option value="1">1.</option>
 						<option value="2">2.</option>
 						<option value="3">3.</option>
@@ -308,7 +309,7 @@
 						<option value="30">30.</option>
 						<option value="31">31.</option>
 					</select>
-					<select class="date" id="to_month" name="to_month">
+					<select class="form-control input-sm date" id="to_month" name="to_month">
 						<option value="0">January</option>
 						<option value="1">February</option>
 						<option value="2">March</option>
@@ -322,7 +323,7 @@
 						<option value="10">November</option>
 						<option value="11">December</option>
 					</select>
-					<select class="date" id="to_fullYear" name="to_fullYear">
+					<select class="form-control input-sm date" id="to_fullYear" name="to_fullYear">
 						<option value="2011">2011</option>
 						<option value="2012">2012</option>
 						<option value="2013">2013</option>
@@ -331,7 +332,7 @@
 						<option value="2016">2016</option>
 						<option value="2017">2017</option>
 					</select>
-					<select class="date" id="to_hours" name="to_hours">
+					<select class="form-control input-sm date" id="to_hours" name="to_hours">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -357,7 +358,7 @@
 						<option value="22">22</option>
 						<option value="23">23</option>
 					</select>
-					<select class="date" id="to_minutes" name="to_minutes">
+					<select class="form-control input-sm date" id="to_minutes" name="to_minutes">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
