--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html manifest="iotviewer.appcache">
 <head>
 	<meta charset='utf-8'>
@@ -119,7 +120,7 @@
 				</div>
 				<form name="date_from">
 					<div class="lines"><div>:</div></div>
-					<select class="date" id="from_date" name="from_date">
+					<select class="form-control input-sm date" id="from_date" name="from_date">
 						<option value="1">1.</option>
 						<option value="2">2.</option>
 						<option value="3">3.</option>
@@ -152,7 +153,7 @@
 						<option value="30">30.</option>
 						<option value="31">31.</option>
 					</select>
-					<select class="date" id="from_month" name="from_month">
+					<select class="form-control input-sm date" id="from_month" name="from_month">
 						<option value="0">January</option>
 						<option value="1">February</option>
 						<option value="2">March</option>
@@ -166,7 +167,7 @@
 						<option value="10">November</option>
 						<option value="11">December</option>
 					</select>
-					<select class="date" id="from_fullYear" name="from_fullYear">
+					<select class="form-control input-sm date" id="from_fullYear" name="from_fullYear">
 						<option value="2011">2011</option>
 						<option value="2012">2012</option>
 						<option value="2013">2013</option>
@@ -175,7 +176,7 @@
 						<option value="2016">2016</option>
 						<option value="2017">2017</option>
 					</select>
-					<select class="date" id="from_hours" name="from_hours">
+					<select class="form-control input-sm date" id="from_hours" name="from_hours">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -201,7 +202,7 @@
 						<option value="22">22</option>
 						<option value="23">23</option>
 					</select>
-					<select class="date" id="from_minutes" name="from_minutes">
+					<select class="form-control input-sm date" id="from_minutes" name="from_minutes">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -272,7 +273,7 @@
 				</div>
 				<form name="date_to">
 					<div class="lines"><div>:</div></div>
-					<select class="date" id="to_date" name="to_date">
+					<select class="form-control input-sm date" id="to_date" name="to_date">
 						<option value="1">1.</option>
 						<option value="2">2.</option>
 						<option value="3">3.</option>
@@ -305,7 +306,7 @@
 						<option value="30">30.</option>
 						<option value="31">31.</option>
 					</select>
-					<select class="date" id="to_month" name="to_month">
+					<select class="form-control input-sm date" id="to_month" name="to_month">
 						<option value="0">January</option>
 						<option value="1">February</option>
 						<option value="2">March</option>
@@ -319,7 +320,7 @@
 						<option value="10">November</option>
 						<option value="11">December</option>
 					</select>
-					<select class="date" id="to_fullYear" name="to_fullYear">
+					<select class="form-control input-sm date" id="to_fullYear" name="to_fullYear">
 						<option value="2011">2011</option>
 						<option value="2012">2012</option>
 						<option value="2013">2013</option>
@@ -328,7 +329,7 @@
 						<option value="2016">2016</option>
 						<option value="2017">2017</option>
 					</select>
-					<select class="date" id="to_hours" name="to_hours">
+					<select class="form-control input-sm date" id="to_hours" name="to_hours">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
@@ -354,7 +355,7 @@
 						<option value="22">22</option>
 						<option value="23">23</option>
 					</select>
-					<select class="date" id="to_minutes" name="to_minutes">
+					<select class="form-control input-sm date" id="to_minutes" name="to_minutes">
 						<option value="0">00</option>
 						<option value="1">01</option>
 						<option value="2">02</option>
