--- a/compile/compile.html
+++ b/compile/compile.html
@@ -1,4 +1,3 @@
-<script src="lib/date.js"></script>
 <link rel="stylesheet" href="contrib/bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="contrib/bootstrap-switch/bootstrap-switch.css">
 <link rel="stylesheet" href="styles/form.css"></link>
@@ -8,6 +7,11 @@
 <link rel="stylesheet" href="styles/menu.css"></link>
 <link rel="stylesheet" href="contrib/panelmenu/panelmenu.css"></link>
 <link rel="stylesheet" href="styles/styles.css"></link>
+
+<script src="lib/appcache.js"></script>
+<script src="lib/date.js"></script>
+<script src="lib/array.js"></script>
+<script src="lib/string.js"></script>
 
 <script src="contrib/jquery/jquery-1.9.1.js"></script>
 <script src="contrib/jsonp/jsonp.js"></script>
@@ -29,6 +33,7 @@
 <script src="lib/om/ProviderThingSpeak.js"></script>
 <script src="lib/om/ProviderXively.js"></script>
 <script src="lib/om/ProviderDriverList.js"></script>
+<script src="lib/om/DeviceData.js"></script>
 <script src="lib/om/Device.js"></script>
 <script src="lib/om/DeviceList.js"></script>
 <script src="lib/om/Provider.js"></script>
@@ -50,11 +55,11 @@
 <script src="contrib/flot/jquery.flot.resize.js"></script>
 <script src="contrib/flot/jquery.flot.crosshair.js"></script>
 <script src="contrib/flot/jquery.flot.selection.js"></script>
+<script src="contrib/flot/jquery.flot.navigate.js"></script>
 <script src="contrib/flot/jquery.flot.time.js"></script>
 
 <script src="lib/views/PlotView.js"></script>
 <script src="contrib/drumjs/drum.js"></script>
-<script src="lib/DateRange.js"></script>
 <script src="lib/views/MenuView.js"></script>
 <script src="contrib/panelmenu/panelmenu.js"></script>
 <script src="lib/main.js"></script>
